fix(clash): prevent scrollbars when dragging cards while searching library

--- a/clash/components/GameComponents/StackedCardList/StackedCardList.module.css
+++ b/clash/components/GameComponents/StackedCardList/StackedCardList.module.css
@@ -9,6 +9,13 @@
     display: flex;
     position: relative;
     overflow: auto;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.cards__visible_overflow {
+    overflow: visible;
 }
 
 .card {
